Fixed responsive design errors such as spacing around ul li nav, figure on home page reviews and radius and spacing on icons for all footer sections

--- a/unplugged-retreat-page/css/main.css
+++ b/unplugged-retreat-page/css/main.css
@@ -205,7 +205,7 @@ header nav {
   font-weight: 700;
   text-transform: uppercase;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   flex-flow: row wrap;
 }
@@ -214,7 +214,8 @@ header nav ul {
 
   display: flex;
   justify-content: space-around;
-  width: 100%
+  width: 100%;
+  padding-left: 0;
 }
 
 header nav ul li {
@@ -259,12 +260,14 @@ footer .social-icons i{
   width: 30px;
   height: 30px;
   margin: 30px;
-  padding-bottom: 10px;
-  border-radius: 30px;
+  border-radius: 60px;
   border-color: #527158;
   border-width: 1px;
   background: #527158;
+  line-height: 30px;
+  padding-bottom: 8px;
 }
+
 
 footer .copyright {
   margin: 20px 0;
@@ -384,6 +387,7 @@ input[type=button] {
   margin: 20px 0;
   
 }
+
 
 
 /*ABOUT*/
@@ -662,6 +666,10 @@ aside .content-wrapper .form {
   margin: 0;
 }
 
+.reviews figure{
+  padding-top: 50px;
+}
+
 /*Footer*/
 
 footer .content-wrapper {
@@ -677,7 +685,7 @@ footer .footer-content {
 }
 
 footer .contact {
-margin-bottom: 0;
+margin-bottom: 35px;
 }
 
 footer .copyright {
@@ -693,6 +701,10 @@ footer p {
   line-height: 1.285;
 }
 
+footer .social h4{
+  margin-bottom: 18px;
+  margin-top: 35px;
+}
 /*=============================================================================================================
 About Page
 ==============================================================================================================*/
